# UCHAT

./: gui.py  haha.ipynb  openssh.sh  package.sh  pyproject.toml  test.html  test.ipynb  xrdp.sh
src/core/: learn_info.py
