[tool.poetry]
name = "uchat"
version = "0.1.0"
description = "This is a product chatbot for ULIS students"
authors = ["Duong Minh Quan <91663460+2uanDM@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.1.3"
ipykernel = "^6.27.0"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.dev.dependencies]
requests = "^2.31.0"
streamlit = "^1.28.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
